[gd_scene load_steps=19 format=3 uid="uid://l6yw5wxqbbm3"]

[ext_resource type="Script" uid="uid://c2t057q0qw21e" path="res://Entity/entity.gd" id="1_orqw4"]
[ext_resource type="Texture2D" uid="uid://8pblmexqx5vk" path="res://Asset/boxes.png" id="1_sxyjl"]
[ext_resource type="Texture2D" uid="uid://48hnhf62todh" path="res://Asset/meme.png" id="2_h2qjg"]
[ext_resource type="PackedScene" uid="uid://dvyakgw5nqb70" path="res://GDBase/Spawner/Launcher/launcher.tscn" id="4_adxne"]
[ext_resource type="Script" uid="uid://twsbkr63b21g" path="res://GDBase/Move/Input/move_gravity_by_input_component.gd" id="4_boq8c"]
[ext_resource type="Script" uid="uid://cmo1t30f66qgo" path="res://GDBase/Move/Orbit/orbit_component.gd" id="5_adxne"]
[ext_resource type="Script" uid="uid://v4uwxotregtq" path="res://GDBase/Health/health_component.gd" id="6_ilp0k"]
[ext_resource type="PackedScene" uid="uid://dssccalehutiv" path="res://GDBase/CellProgressBar/cells_progress_bar.tscn" id="7_psbbe"]
[ext_resource type="PackedScene" uid="uid://bxnoo43u8rl6x" path="res://GDBase/Spawner/Launcher/Bullet/sword_qi.tscn" id="8_75iov"]
[ext_resource type="PackedScene" uid="uid://b84eyanlvuixs" path="res://GDBase/Spawner/Launcher/Bullet/bullet.tscn" id="9_sb4mi"]
[ext_resource type="Script" uid="uid://cst52mewg8j3" path="res://GDBase/Spawner/Launcher/launcher.gd" id="10_pgb4x"]
[ext_resource type="PackedScene" uid="uid://dob7qv6qmj4li" path="res://GDBase/Spawner/Launcher/Bullet/fireball.tscn" id="11_vjdlm"]
[ext_resource type="PackedScene" uid="uid://b0e1lkj7glll0" path="res://GDBase/Spawner/Launcher/Bullet/circular_chop.tscn" id="13_orqw4"]
[ext_resource type="Texture2D" uid="uid://ba4iwbj1wwf88" path="res://Asset/ui/左键双击.png" id="16_dwhkp"]
[ext_resource type="PackedScene" uid="uid://bk6rbdjm7r8bs" path="res://GDBase/ui/技能按钮.tscn" id="17_dibct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxyjl"]
size = Vector2(12, 12)

[sub_resource type="Curve" id="Curve_h2qjg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_boq8c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Entity" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_orqw4")

[node name="Sprite" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprite"]
texture = ExtResource("1_sxyjl")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Sprite2D2" type="Sprite2D" parent="Sprite"]
texture = ExtResource("2_h2qjg")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sxyjl")

[node name="MoveGravityByInput" type="Node" parent="." node_paths=PackedStringArray("mover")]
script = ExtResource("4_boq8c")
mover = NodePath("..")
gravity = 16.0
jump_power = 256.0
max_jump_num = 2
jump_num = 2
empty_jump_time = 1.0
dash_time = 0.2
dash_speed = 512.0
time_faster = 0.2
time_slower = 0.2
faster_curve = SubResource("Curve_h2qjg")
slower_curve = SubResource("Curve_boq8c")

[node name="OrbitComponent" type="Node2D" parent="." node_paths=PackedStringArray("rotation_center")]
position = Vector2(18, 0)
script = ExtResource("5_adxne")
active = true
rotation_center = NodePath("..")
radius = 18.0
to_mouse = true
metadata/_custom_type_script = "uid://cmo1t30f66qgo"

[node name="HealthComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("6_ilp0k")
max_health = 6
current_health = 6
is_hited_with_invulnerable = true
hitd_invulnerable_time = 1.0
metadata/_custom_type_script = "uid://v4uwxotregtq"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("RectangleShape2D_sxyjl")

[node name="CellsProgressBar" parent="HealthComponent" node_paths=PackedStringArray("health_component") instance=ExtResource("7_psbbe")]
position = Vector2(-12, 5)
health_component = NodePath("..")
max_cells_num = 6
current_cells_num = 6

[node name="Attack" parent="." node_paths=PackedStringArray("shooter", "gun") instance=ExtResource("4_adxne")]
shooter = NodePath("..")
gun = NodePath("../OrbitComponent")
fire_action = "attack"
fire_interval = 0.5
bullet = ExtResource("8_75iov")
bullet_velocity = 0.1
bullet_exit_time = 0.05

[node name="Fire" parent="." node_paths=PackedStringArray("shooter", "gun") instance=ExtResource("4_adxne")]
shooter = NodePath("..")
gun = NodePath("../OrbitComponent")
fire_action = "fire"
fire_interval = 1.0
bullet = ExtResource("9_sb4mi")
bullet_velocity = 12.0

[node name="FireBall" type="Node2D" parent="." node_paths=PackedStringArray("shooter", "gun")]
script = ExtResource("10_pgb4x")
shooter = NodePath("..")
gun = NodePath("../OrbitComponent")
fire_action = "skill_r"
fire_interval = 5.0
bullet = ExtResource("11_vjdlm")
bullet_velocity = 8.0
metadata/_custom_type_script = "uid://cst52mewg8j3"

[node name="circular_chop" type="Node2D" parent="." node_paths=PackedStringArray("shooter", "gun")]
script = ExtResource("10_pgb4x")
shooter = NodePath("..")
gun = NodePath("../Sprite")
fire_action = "skill_f"
bullet = ExtResource("13_orqw4")
bullet_exit_time = 0.1
metadata/_custom_type_script = "uid://cst52mewg8j3"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -99.0
offset_right = -31.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="技能按钮2" parent="CanvasLayer/HBoxContainer" instance=ExtResource("17_dibct")]
layout_mode = 2

[node name="技能按钮" parent="CanvasLayer/HBoxContainer" instance=ExtResource("17_dibct")]
layout_mode = 2
"按键" = "G"

[node name="技能按钮3" parent="CanvasLayer/HBoxContainer" instance=ExtResource("17_dibct")]
layout_mode = 2
"按键" = "V"

[node name="技能按钮4" parent="CanvasLayer/HBoxContainer" instance=ExtResource("17_dibct")]
layout_mode = 2
"按键" = ""

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer/技能按钮4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 7.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("16_dwhkp")
expand_mode = 1

[connection signal="hited" from="HealthComponent" to="." method="_on_health_component_hited"]
[connection signal="fired" from="Attack" to="." method="_on_attack_fired"]
[connection signal="fired" from="Fire" to="." method="_on_fire_fired"]
[connection signal="created_interval_timer" from="FireBall" to="." method="_on_fire_ball_created_interval_timer"]
[connection signal="fired" from="FireBall" to="." method="_on_fire_ball_fired"]
[connection signal="fired" from="circular_chop" to="." method="_on_circular_chop_fired"]
